--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -7,6 +7,19 @@
     & + .question {
         margin-top: 16px;
     }
+    
+    &.highlighted {
+        background: #f4f0ff;
+        border: 1px solid #835afd;
+
+        footer .user-info span {
+            color: #29292e;
+        }
+    }
+
+    &.answered {
+        background: #DBDCDD;
+    }
 
     p{
         color: #29292e;
@@ -35,7 +48,13 @@
             }
         }
 
+        div + div {
+            display: flex;
+            gap: 16px;
+        }
+
         button {
+
             border: 0;
             background: transparent;
             cursor: pointer;
@@ -51,7 +70,7 @@
                     color: #835afd;
 
                     svg path {
-                        stroke: #825afd;
+                        stroke: #835afd;
                     }
                 }
             }
